--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                                 <option selected="">---</option>
                                                 <option value="1">-</option>
                                                 <option value="2">+</option>
-                                                <option value="3">.</option>
+                                                <option value="3">*</option>
                                                 <option value="3">/</option>
                                             </select>
                                         </td>
