--- a/tabs.html
+++ b/tabs.html
@@ -69,7 +69,7 @@
                                                                 <td>
                                                                     <select class="form-select"
                                                                         aria-label="Default select example">
-                                                                        <option selected="">---</option>
+                                                                        <option selected="">+</option>
                                                                         <option value="1">-</option>
                                                                         <option value="2">+</option>
                                                                         <option value="3">*</option>
@@ -138,7 +138,7 @@
                                                                 <td>
                                                                     <select class="form-select"
                                                                         aria-label="Default select example">
-                                                                        <option selected="">---</option>
+                                                                        <option selected="">+</option>
                                                                         <option value="1">-</option>
                                                                         <option value="2">+</option>
                                                                         <option value="3">*</option>
@@ -207,7 +207,7 @@
                                                                 <td>
                                                                     <select class="form-select"
                                                                         aria-label="Default select example">
-                                                                        <option selected="">---</option>
+                                                                        <option selected="">+</option>
                                                                         <option value="1">-</option>
                                                                         <option value="2">+</option>
                                                                         <option value="3">*</option>
