--- a/tabs.html
+++ b/tabs.html
@@ -268,10 +268,10 @@
                 <div class="modal-header">
                     <div class="col">
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-lg-3">
                                 <h1 class="modal-title fs-5" id="rangemodalLabel">Range Setting</h1>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 p-t-5">
                                 <div class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" role="switch"
                                         id="flexSwitchCheckChecked" checked>
